samples/_failures_safe/1761695132_fb4135_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ac0fcf1.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_3ac0fcf1.c:164:18: error: expected ‘)’ at end of input
  164 |     if (start_idx
      |        ~         ^
      |                  )
./samples/SAFE/__tmp_3ac0fcf1.c:164:5: error: expected declaration or statement at end of input
  164 |     if (start_idx
      |     ^~
